--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </ul>
         </nav>
     </div>
-    <div class="hero" alt="Group of people working together"></div>
-    <div class="content">
+    <figure class="hero" alt="Group of people working together"></figure>
+    <main class="content">
         <!--Search Engine Optimizer section-->
         <article class="search-engine-optimization" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Organized desk" class="float-left" />
@@ -49,7 +49,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </div>
+    </main>
     <!--Benefits Section-->
     <aside class="benefits">
         <section class="benefit-lead">
